--- a/style/index.css
+++ b/style/index.css
@@ -37,3 +37,67 @@ footer, header, hgroup, menu, nav, section {
     max-width:100%;
     border:1px solid grey; 
 }
+/*General Styles*/
+html{
+    font-size: 62.5%;
+}
+body{
+    font-size: 1.8rem;
+    height: 1.5;
+    color: #000000;
+    background-color: #FFF;
+}
+a{
+    text-decoration: none;
+    background-color: grey;
+    color: #000000;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    transition: 2s;
+}
+a:hover{
+    background-color: #000000;
+    color: #FFF;
+    border: 2px solid #FFF;
+}
+h1, h2, h3{
+    /*font style here*/
+}
+h1{
+    font-size: 6rem;
+}
+h2{
+    font-size: 3rem;
+}
+h3{
+    font-family: 2.2rem;
+}
+section, footer{
+    padding: 4% 0;
+}
+
+/*Helper Classes*/
+nav{
+    position: fixed;
+    width: 100%;
+    top:0;
+    z-index: 999;
+    background-color: rgba(102, 0, 204, 0.8);
+}
+nav div{
+    width: 100%;
+}
+div img{
+    width: 8%;
+}
+.bio button{
+    border: 2px solid #000000;
+    color: #000000;
+    transition: 2s;
+}
+.bio button:hover{
+    background-color: #000000;
+    color:#FFF;
+    border: 2px solid #6600cc;
+}
