--- a/style/index.css
+++ b/style/index.css
@@ -49,11 +49,9 @@ body{
 }
 a{
     text-decoration: none;
-    background-color: grey;
+    border: 2px solid #8600b3;
+    background-color: rgb(134, 0, 179, 80); /* #8600b3 */
     color: #000000;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
     transition: 2s;
 }
 a:hover{
@@ -78,15 +76,24 @@ section, footer{
 }
 
 /*Helper Classes*/
-nav{
-    position: fixed;
+.colorbanner{
     width: 100%;
+    height: 18%;
+    background-color: rgba(102, 0, 204, 0.8);
+    position: fixed;
     top:0;
     z-index: 999;
-    background-color: rgba(102, 0, 204, 0.8);
 }
-nav div{
-    width: 100%;
+nav{
+    position: fixed;
+    top:0;
+    z-index: 999;
+}
+nav div .links{
+    display: flex;
+    align-items: left;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
 div img{
     width: 8%;
