--- a/style/index.css
+++ b/style/index.css
@@ -47,14 +47,14 @@ body{
     color: #000000;
     background-color: #FFF;
 }
-a{
+div.links a{
     text-decoration: none;
     border: 2px solid #8600b3;
     background-color: rgb(134, 0, 179, 80); /* #8600b3 */
     color: #000000;
     transition: 2s;
 }
-a:hover{
+div.links a:hover{
     background-color: #000000;
     color: #FFF;
     border: 2px solid #FFF;
@@ -75,10 +75,10 @@ section, footer{
     padding: 4% 0;
 }
 
-/*Helper Classes*/
+/*NavBar Style*/
 .colorbanner{
     width: 100%;
-    height: 18%;
+    height: 20%;
     background-color: rgba(102, 0, 204, 0.8);
     position: fixed;
     top:0;
@@ -93,14 +93,37 @@ nav div .links{
     display: flex;
     align-items: left;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 div img{
     width: 8%;
+    margin: 2%;
+}
+
+/*Bio Section Styles*/
+#top{
+    margin-top: 6%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.pfp img{
+    width: 80%;
+    height: auto;
+    border-radius: 10%;
+    margin-left: 10%;
+}
+.bio{
+    font-family: ;
+    margin-top: 10%;
+    text-align: center;
+    align-items: center;
 }
 .bio button{
-    border: 2px solid #000000;
+    border: 2px solid #8600b3;
+    background-color: rgb(134, 0, 179, 80); /* #8600b3 */
     color: #000000;
+    margin: 1% 0;
     transition: 2s;
 }
 .bio button:hover{
