--- a/style/index.css
+++ b/style/index.css
@@ -42,10 +42,14 @@ html{
     font-size: 62.5%;
 }
 body{
-    font-size: 1.8rem;
+    font-size: 2rem;
     height: 1.5;
     color: #000000;
     background-color: #FFF;
+    font-family: 'Indie Flower', cursive;
+}
+p{
+    font-size: 1.8rem;
 }
 div.links a{
     text-decoration: none;
@@ -60,16 +64,15 @@ div.links a:hover{
     border: 2px solid #FFF;
 }
 h1, h2, h3{
-    /*font style here*/
-}
+    font-family: 'Patrick Hand', cursive;}
 h1{
     font-size: 6rem;
 }
 h2{
-    font-size: 3rem;
+    font-size: 4rem;
 }
 h3{
-    font-family: 2.2rem;
+    font-family: 2.5rem;
 }
 section, footer{
     padding: 4% 0;
@@ -78,7 +81,7 @@ section, footer{
 /*NavBar Style*/
 .colorbanner{
     width: 100%;
-    height: 20%;
+    height: 22%;
     background-color: rgba(102, 0, 204, 0.8);
     position: fixed;
     top:0;
@@ -104,22 +107,23 @@ div img{
 #top{
     margin-top: 6%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    align-items: center;
+    justify-content: space-evenly;
+
 }
 .pfp img{
-    width: 80%;
+    width: 100%;
     height: auto;
     border-radius: 10%;
     margin-left: 10%;
 }
 .bio{
     font-family: ;
-    margin-top: 10%;
-    text-align: center;
+    margin: 10% 10% 0 10%;
     align-items: center;
 }
 .bio button{
+    font-family: 'Indie Flower', cursive;
     border: 2px solid #8600b3;
     background-color: rgb(134, 0, 179, 80); /* #8600b3 */
     color: #000000;
@@ -127,6 +131,42 @@ div img{
     transition: 2s;
 }
 .bio button:hover{
+    background-color: #000000;
+    color:#FFF;
+    border: 2px solid #6600cc;
+}
+
+/*Pojects Section Styles*/
+#projects{
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/*About Section Styles*/
+#about{
+    display: flex;
+    justify-content: space-around;
+}
+
+/*Footer Styles*/
+#contact{
+    width: 100%;
+    height: 22%;
+    text-align: center;
+    background-color: rgba(102, 0, 204, 0.8);
+    justify-content: center;
+}
+#contact button{
+    font-family: 'Indie Flower', cursive;
+    font-size: 1.8rem;
+    border: 2px solid #8600b3;
+    background-color: rgb(134, 0, 179, 80); /* #8600b3 */
+    color: #000000;
+    transition: 2s;
+}
+#contact button:hover{
     background-color: #000000;
     color:#FFF;
     border: 2px solid #6600cc;
