--- a/style/index.css
+++ b/style/index.css
@@ -196,3 +196,12 @@ div img{
     color:#FFF;
     border: 2px solid #6600cc;
 }
+
+/*media queries*/
+@media (max-width: 800px){
+
+}
+
+@media (max-width: 500px) {
+
+}
